--- a/config/configs/defgrid_common_defconfig
+++ b/config/configs/defgrid_common_defconfig
@@ -18,6 +18,7 @@ BR2_SYSTEM_DHCP="eth0"
 BR2_TARGET_TZ_INFO=y
 BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL)/common/system_users"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/common/rootfs_overlay"
+BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL)/common/rootfs_permissions"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
 BR2_PACKAGE_DHCPCD=y
