--- a/config/configs/defgrid_common_defconfig
+++ b/config/configs/defgrid_common_defconfig
@@ -22,6 +22,7 @@ BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL)/common/rootfs_permissions"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/common/busybox_config"
+BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
 # BR2_PACKAGE_DNSMASQ_DHCP is not set
