--- a/config/common/syslinux.cfg
+++ b/config/common/syslinux.cfg
@@ -4,4 +4,4 @@ DEFAULT linux
   SAY SYSLINUX is booting the kernel...
 LABEL linux
   KERNEL bzImage
-  APPEND root=/dev/sda2 console=tty0 console=ttyS0,115200
+  APPEND root=/dev/sda2 console=tty0 console=hvc0
