--- a/config/configs/defgrid_common_defconfig
+++ b/config/configs/defgrid_common_defconfig
@@ -20,7 +20,9 @@ BR2_ROOTFS_USERS_TABLES="$(BR2_EXTERNAL)/common/system_users"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL)/common/rootfs_overlay"
 BR2_ROOTFS_DEVICE_TABLE="$(BR2_EXTERNAL)/common/rootfs_permissions"
 BR2_LINUX_KERNEL=y
-BR2_LINUX_KERNEL_USE_ARCH_DEFAULT_CONFIG=y
+# BR2_LINUX_KERNEL_DEFCONFIG="x86_64"
+BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL)/common/linux_config"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/common/busybox_config"
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DNSMASQ=y
