--- a/config/configs/defgrid_common_defconfig
+++ b/config/configs/defgrid_common_defconfig
@@ -24,6 +24,8 @@ BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
 BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL)/common/linux_config"
 BR2_PACKAGE_BUSYBOX_CONFIG="$(BR2_EXTERNAL)/common/busybox_config"
+BR2_PACKAGE_CONSUL=y
+BR2_PACKAGE_DEFGRID_INIT=y
 BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_DNSMASQ=y
 # BR2_PACKAGE_DNSMASQ_TFTP is not set
