--- a/config/common/syslinux-qemu.cfg
+++ b/config/common/syslinux-qemu.cfg
@@ -4,4 +4,4 @@ DEFAULT linux
   SAY SYSLINUX is booting the kernel...
 LABEL linux
   KERNEL bzImage
-  APPEND root=/dev/vda2 console=hvc0 console=ttyS0,11520n8
+  APPEND root=/dev/vda2 console=hvc0 console=ttyS0,11520n8 -- qemu
