--- a/config/common/syslinux-xen.cfg
+++ b/config/common/syslinux-xen.cfg
@@ -4,4 +4,4 @@ DEFAULT linux
   SAY SYSLINUX is booting the kernel...
 LABEL linux
   KERNEL bzImage
-  APPEND root=/dev/xvda2 console=tty0 console=ttyS0,11520n8 xencons=xvc console=xvc0
+  APPEND root=/dev/xvda2 console=tty0 console=ttyS0,11520n8 xencons=xvc console=xvc0 -- aws
