Custom VGA Text console font
This is mostly just an easter egg since few people will ever see the
real console on a working system, but we'll use the local console as a
last-resort debugging feature for platforms that are able to show a
screenshot of the local display (EC2 is, for example) where we can see
a summary of the state of the system even if SSH and the serial log are
both broken.

--- a/config/Config.in
+++ b/config/Config.in
@@ -1,2 +1,3 @@
 source "$BR2_EXTERNAL/packages/consul/Config.in"
+source "$BR2_EXTERNAL/packages/defgrid-confont/Config.in"
 source "$BR2_EXTERNAL/packages/defgrid-init/Config.in"
