Install haveged binary
haveged is a daemon for generating random numbers using inconsistencies in
CPU instruction execution time due to things like CPU cache state,
pipeline state, etc.

defgrid-init will use this to generate some initial entropy for
/dev/urandom on boot, which it will then use to generate the SSH host key.

--- a/config/packages/defgrid-init/Config.in
+++ b/config/packages/defgrid-init/Config.in
@@ -5,6 +5,7 @@ config BR2_PACKAGE_DEFGRID_INIT
 	depends on BR2_TOOLCHAIN_HAS_THREADS
 	depends on BR2_USE_MMU
 	depends on BR2_USE_WCHAR
+	select BR2_PACKAGE_HAVEGED
 	help
 	  defgrid-specific /sbin/init
 
